# meshy-ai-mcp-server

./: .env.example  .gitignore  CLAUDE.md  README.md  config.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: publish.yml
src/: __init__.py  client.ts  index.ts  server.py
