[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshy-ai-mcp-server"
version = "0.1.0"
description = "MCP server for interacting with Meshy AI's 3D generation API"
readme = "README.md"
authors = [
    {name = "Meshy AI MCP Server Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "pydantic>=2.6.4",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/meshy-ai-mcp-server"
"Bug Tracker" = "https://github.com/yourusername/meshy-ai-mcp-server/issues"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88